--- a/skinnywms/templates/leaflet_demo.html
+++ b/skinnywms/templates/leaflet_demo.html
@@ -42,13 +42,17 @@
 
       let layers = {};
       layerNames.forEach(function(name) {
-        layers[name["title"]] = L.tileLayer.wms('/wms?', {
+        var options = {
           layers: name["name"],
           format: 'image/png',
           transparent: 'TRUE',
           attribution: '',
-          version: '1.3.0'
-        });
+          version: '1.3.0',
+        };
+        if ("time" in name) {
+            options.time = name.time;
+        }
+        layers[name["title"]] = L.tileLayer.wms('/wms?', options);
       });
 
       let baseMaps = {
@@ -66,17 +70,23 @@
       let layerNames = [];
       let $xml = $($.parseXML(text));
       $xml.find('Layer').each(function() {
-        title = $(this).find('> Title').text()
-        name = $(this).find('> Name').text()
-        if ($(this).text() != 'background'){
+        if ($(this).text() == 'background')
+          return;
+
+        var title = $(this).find('> Title').text()
+        var name = $(this).find('> Name').text()
+        var times = $(this).find('> Dimension[name="time"]').text().split(",");
+        console.log(name, times);
+        if (times.length > 0 && times[0] != "") {
+            times.forEach(function(time) {
+                layerNames.push({ name: name, title: title + " @ " + time, time: time });
+            });
+        } else {
           layerNames.push({ name : name, title : title} );
         }
       });
       plotLayers(layerNames);
     });
-
-
-
   </script>
 </body>
 </html>
