--- a/skinnywms/templates/leaflet_demo.html
+++ b/skinnywms/templates/leaflet_demo.html
@@ -15,19 +15,24 @@
 </head>
 <body>
   <div id="menu">
-      <select id="layer-selection">
-      </select>
-      <select id="time-selection">
-      </select>
+      <label for="layer-selection">Layer</label><select id="layer-selection"></select>
+      <label for="time-selection">Time</label><select id="time-selection" disabled></select>
   </div>
   <div id="mapid"></div>
   <style>
     html, body {
       height: 100%;
       margin: 0;
+      font-family: sans-serif;
     }
     #mapid {
       height: 100%;
+    }
+    label {
+        padding: 0.2em;
+    }
+    select {
+        min-width: 200px;
     }
   </style>
   <script>
@@ -73,8 +78,12 @@
               attribution: '',
               version: '1.3.0'
           }
-          if (time)
+          if (time) {
               options.time = time;
+              $(this).prop("disabled", false);
+          } else {
+              $(this).prop("disabled", true);
+          }
           current_layer = L.tileLayer.wms("/wms?", options);
           current_layer.addTo(mymap);
       });
