--- a/skinnywms/templates/leaflet_demo.html
+++ b/skinnywms/templates/leaflet_demo.html
@@ -75,6 +75,7 @@
               layers: layer.name,
               format: 'image/png',
               transparent: 'TRUE',
+              opacity: 0.8,
               attribution: '',
               version: '1.3.0'
           }
