--- a/skinnywms/templates/leaflet_demo.html
+++ b/skinnywms/templates/leaflet_demo.html
@@ -96,7 +96,7 @@
           var cur = $("#time-selection option:selected");
           var prev = $("#time-selection option:selected").prev();
           if (prev.length == 0)
-              prev = $("#time-selection option:selected").last();
+              prev = $("#time-selection option").last();
 
           cur.removeAttr('selected');
           prev.attr('selected', 'selected');
@@ -106,7 +106,7 @@
           var cur = $("#time-selection option:selected");
           var next = $("#time-selection option:selected").next();
           if (next.length == 0)
-              next = $("#time-selection option:selected").first();
+              next = $("#time-selection option").first();
 
           cur.removeAttr('selected');
           next.attr('selected', 'selected');
