--- a/skinnywms/templates/leaflet_demo.html
+++ b/skinnywms/templates/leaflet_demo.html
@@ -94,22 +94,20 @@
       });
       $("#prev-time").on("click", function() {
           var cur = $("#time-selection option:selected");
-          var prev = $("#time-selection option:selected").prev();
-          if (prev.length == 0)
-              prev = $("#time-selection option").last();
+          var prev = $("#time-selection option:selected").prev().val()
+          if (!prev)
+              prev = $("#time-selection option").last().val();
 
-          cur.removeAttr('selected');
-          prev.attr('selected', 'selected');
+          $("#time-selection").val(prev);
           $("#time-selection").change();
       });
       $("#next-time").on("click", function() {
           var cur = $("#time-selection option:selected");
-          var next = $("#time-selection option:selected").next();
-          if (next.length == 0)
-              next = $("#time-selection option").first();
+          var next = $("#time-selection option:selected").next().val();
+          if (!next)
+              next = $("#time-selection option").first().val();
 
-          cur.removeAttr('selected');
-          next.attr('selected', 'selected');
+          $("#time-selection").val(next);
           $("#time-selection").change();
       });
 
