--- a/skinnywms/templates/leaflet_demo.html
+++ b/skinnywms/templates/leaflet_demo.html
@@ -17,6 +17,7 @@
   <div id="menu">
       <label for="layer-selection">Layer</label><select id="layer-selection" multiple></select>
       <label for="time-selection">Time</label><select id="time-selection" disabled></select>
+      <button id="load-maps" disabled>Load maps</button>
       <button id="prev-time" disabled>Prev</button>
       <button id="next-time" disabled>Next</button>
   </div>
@@ -55,45 +56,56 @@
           version: '1.3.0'
         }).addTo(mymap);
 
-      let current_layer = null;
-
+      // Association between select tag and layer object
       layerNames.forEach(function(layer) {
-        var select = $("<option value='" + layer.name + "'>" + layer.title + "</option>");
-        select.data("layer", layer);
-        $("#layer-selection").append(select);
-      });
-
-      $("#layer-selection").on("change", function() {
-          $("#time-selection").empty();
-          $("#layer-selection option:selected").data("layer").times.forEach(function(time) {
-              $("#time-selection").append("<option value='" + time + "'>" + time + "</option>");
-          });
-          $("#time-selection").change();
-      });
-      $("#time-selection").on("change", function() {
-          var time = $("#time-selection option:selected").val();
-          var layer = $("#layer-selection option:selected").data("layer");
-          if (current_layer)
-              mymap.removeLayer(current_layer);
-          var options = {
+          let options = {
               layers: layer.name,
               format: 'image/png',
               transparent: 'TRUE',
               opacity: 0.8,
               attribution: '',
               version: '1.3.0'
-          }
-          if (time) {
-              options.time = time;
-              $(this).prop("disabled", false);
-              $("#next-time, #prev-time").prop("disabled", false);
-          } else {
-              $(this).prop("disabled", true);
-              $("#next-time, #prev-time").prop("disabled", true);
-          }
-          current_layer = L.tileLayer.wms("/wms?", options);
-          current_layer.addTo(mymap);
+          };
+          let wmslayer = L.tileLayer.wms("/wms?", options);
+          $("#layer-selection").append($("<option>")
+                                       .val(layer.name)
+                                       .text(layer.title)
+                                       .data("layer", layer)
+                                       .data("wmslayer", wmslayer));
       });
+
+      // When a layer is added/removed:
+      // 1. Update the time values (union of the available time values of the selected layers)
+      // 2. Enable the "load maps" button
+      $("#layer-selection").on("change", function(handler) {
+          let current_time = $("#time-selection option:selected").val();
+          $("#time-selection").empty();
+
+          let available_times = new Set();
+          $("#layer-selection option:selected").each(function() {
+              $(this).data("layer").times.forEach(function(time) {
+                  available_times.add(time);
+              });
+          });
+          available_times.forEach(function(time) {
+              let select = $("<option>").val(time).text(time);
+              if (time == current_time) {
+                  select.prop("selected", "selected");
+              }
+              $("#time-selection").append(select);
+          });
+          if (current_time) {
+              current_time_tag = $('#time-selection option[value="' + current_time + '"]');
+              if (current_time_tag.length == 0) {
+                  $("#time-selection option").first("selected", "selected");
+              } else {
+                  current_time_tag.attr("selected", "selected");
+              }
+          }
+          $("#time-selection, #next-time, #prev-time").prop("disabled", available_times.size == 0);
+          $("#load-maps").prop("disabled", false);
+      });
+      // On click, set the previous time value and show the selected maps
       $("#prev-time").on("click", function() {
           var cur = $("#time-selection option:selected");
           var prev = $("#time-selection option:selected").prev().val()
@@ -101,8 +113,9 @@
               prev = $("#time-selection option").last().val();
 
           $("#time-selection").val(prev);
-          $("#time-selection").change();
+          update_map();
       });
+      // On click, set the next time value and show the selected maps
       $("#next-time").on("click", function() {
           var cur = $("#time-selection option:selected");
           var next = $("#time-selection option:selected").next().val();
@@ -110,9 +123,55 @@
               next = $("#time-selection option").first().val();
 
           $("#time-selection").val(next);
-          $("#time-selection").change();
+          update_map();
+      });
+      // On click, update the map with the current layer/time selection
+      $("#load-maps").on("click", function() {
+          update_map();
       });
 
+      // Show the selected layers.
+      // The layers without available time values are always showed.
+      // Otherwise, the layer is showed only if the selected time is among
+      // the time values of the layer itself.
+      function update_map() {
+          let time = $("#time-selection option:selected").val();
+          $("#layer-selection option").each(function() {
+              let wmslayer = $(this).data("wmslayer");
+              let layer = $(this).data("layer");
+              if (!$(this).prop("selected")) {
+                  // Remove not selected layers
+                  if (mymap.hasLayer(wmslayer)) {
+                      mymap.removeLayer(wmslayer);
+                  }
+              } else {
+                  if (layer.times.length > 0) {
+                      // If the layer has time values
+                      if (layer.times.indexOf(time) >= 0) {
+                          // Update the time param only if needed
+                          if (wmslayer.wmsParams.time != time) {
+                              wmslayer.setParams({
+                                 time: time
+                              });
+                          }
+                          if (!mymap.hasLayer(wmslayer)) {
+                              mymap.addLayer(wmslayer);
+                          }
+                      } else {
+                          // If the layer is not defined for the selected time,
+                          // remove it.
+                          if (mymap.hasLayer(wmslayer))
+                              mymap.removeLayer(wmslayer);
+                      }
+                  } else {
+                      // If the layer hasn't time values, add it to the map
+                      if (!mymap.hasLayer(wmslayer)) {
+                          mymap.addLayer(wmslayer);
+                      }
+                  }
+              }
+          });
+      }
 
       let baseMaps = {
         'background': background
