Force queryable=1 in GetCapabilities 1.3.0 (see socib/Leaflet.TimeDimension#139)

--- a/skinnywms/templates/getcapabilities_1.3.0.xml
+++ b/skinnywms/templates/getcapabilities_1.3.0.xml
@@ -108,7 +108,7 @@
       {% endfor %}
 
       {% for l in layers %}
-      <Layer{% if l.queryable %} queryable="1"{% endif %}>
+      <Layer queryable="1">
         <Name>{{ l.name }}</Name>
 	{% if l.title %}
         <Title>{{ l.title }}</Title>
