--- a/skinnywms/templates/getcapabilities_1.1.1.xml
+++ b/skinnywms/templates/getcapabilities_1.1.1.xml
@@ -129,9 +129,9 @@
           <Name>{{ s.name }}</Name>
           <Title>{{ s.title }}</Title>
           <Abstract>{{ s.description }}</Abstract>
-          <LegendURL width="{{ legend_width }}" height="{{ legend_height }}">
+          <LegendURL width="500" height="125">
             <Format>image/png</Format>
-            <OnlineResource xmlns:xlink="http://www.w3.org/1999/xlink" xlink:type="simple" xlink:href="{{ service.url }}?request=GetLegendGraphic&amp;layer={{ l.name }}&amp;style={{ s.name }}&amp;width={{ legend_width }}&amp;height={{ legend_height }}"/>
+            <OnlineResource xmlns:xlink="http://www.w3.org/1999/xlink" xlink:type="simple" xlink:href="{{ service.url }}?request=GetLegendGraphic&amp;layer={{ l.name }}&amp;style={{ s.name }}&amp;width=500&amp;height=125"/>
           </LegendURL>
         </Style>
         {% endfor %}
