--- a/skinnywms/templates/leaflet_demo.html
+++ b/skinnywms/templates/leaflet_demo.html
@@ -1,21 +1,40 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+  <link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
+  <link rel="stylesheet" 
+    href="static/css/leaflet-1.3.1.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin=""/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.0/dist/leaflet.timedimension.control.min.css" />
+  <link rel="stylesheet" 
+    href="static/css/leaflet.timedimension.control-1.1.0.min.css" 
+    integrity="sha512-XYq3haZyzXMyIeexNlcqH1RNTMdoOhgXnzKi29fGpTy0fgzlYVyy/x+cfkkPQSDY7LQG6mRAQAvcv3iC0IYxiA=="
+    crossorigin=""/>
+  <link rel="stylesheet" 
+    href="static/css/leaflet-html-legend-0.3.4.css" 
+    integrity="sha512-qfcZaBG4c15buuUH0ewfe/2h1BVd4txcrhiJJxgJ5EXGP822ibCqpTsJFQyyQp4SEPgQ/Rpj+pLALRJXXVrH6w=="
+    crossorigin=""/>
   <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+  <script src="static/js/leaflet-1.3.1.js"
     integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
-
   <script
-    src="https://code.jquery.com/jquery-1.12.4.js"
+    src="static/js/jquery-1.12.4.js"
     integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
     crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.0/dist/leaflet.timedimension.min.js"></script>
+  <script
+    src="static/js/iso8601-js-period-0.2.1.min.js"
+    integrity="sha512-H9EnpWO2b9EDf/ViaCEoxOZRB6AcYaeLIqg8O5R0vIu4MfqUhb7sL/8kFh9jnzZ5vixgd21PF9TWppxU1hSeeQ=="
+    crossorigin="anonymous"></script>
+  <script
+    src="static/js/leaflet.timedimension-1.1.0.min.js"
+    integrity="sha512-NDftc6C1NxjJ6WhbWV4/RIJHN8DLylJUWhBKJC8bHROOoTqCvfh9GRuplnTgiBIDWHudOreTmFWT4FlCDn5Gag=="
+    crossorigin="anonymous"></script>
+  <script
+    src="static/js/leaflet-html-legend-0.3.4.js"
+    integrity="sha512-FLz9Z0kdR5I6tKaWty9NTrMZHDONCIrHA2mkGjsyg6rZgIHnPqQu7ahpC/KtOWPj7Xl2wdaDC9ngOWSk9/qv7Q=="
+    crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="mapid"></div>
@@ -89,14 +108,17 @@
               // fix the time dimesion parsing
               layers[title]._parseTimeDimensionFromCapabilities = parseTimeDimensionFromCapabilitiesFix;
 
+
               let legendControl = L.control({
                   position: 'bottomright'
               });
-              legendControl.onAdd = function(map) {
-                  var div = L.DomUtil.create('div', 'info legend');
-                  div.innerHTML += '<img src="' + legendurl + '"/>';
-                  return div;
-              };
+              if (legendurl) {
+                legendControl.onAdd = function(map) {
+                    var div = L.DomUtil.create('div', 'info legend');
+                    div.innerHTML += '<img src="' + legendurl + '"/>';
+                    return div;
+                };
+              }
               legends[title] = legendControl;
           });
           let baseMaps = {
